Updated the documentation

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
-  <title>Government of Makueni County – Projects Monitoring & Tracking System</title>
+  <title>Government of Vihiga County – MERL TOOL</title>
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -20,7 +20,7 @@
       <a class="brand" href="#">
         <img src="static/images/coat-of-arms.png" alt="County Logo" class="brand-logo">
         <span class="brand-text">
-          Government of Makueni County
+          Government of Vihiga County
         </span>
       </a>
 
@@ -51,11 +51,11 @@
       </div>
 
       <div class="hero-copy">
-        <h1>
-          <span>Government of Makueni County</span><br>
-          <span class="tight">Projects Monitoring and</span><br>
-          <span class="tight">Tracking System</span>
+        <h1 class="hero-rotator" aria-label="Government of Vihiga County – Monitoring and Evaluation – Tool">
+            <span class="slide">Government of Vihiga County</span>
+            <span class="slide">Monitoring, Evaluation, Reporting, and Learning</span>
         </h1>
+
 
         <div class="divider"></div>
 
@@ -104,7 +104,7 @@
   <!-- FOOTER (placeholder) -->
   <footer class="footer">
     <div class="container footer-inner">
-      <p>© <span id="year"></span> Government of Makueni County. All rights reserved.</p>
+      <p>© <span id="year"></span> Government of Vihiga County. All rights reserved.</p>
       <div class="footer-links">
         <a href="#">Privacy</a>
         <span>·</span>
