--- a/index.html
+++ b/index.html
@@ -3,25 +3,19 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
-  <title>Government of Vihiga County – MERL TOOL</title>
-
-  <!-- Fonts -->
+  <title>Government of Kenya – MERL TOOL</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
-
-  <!-- Styles -->
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <!-- NAVBAR -->
   <header class="navbar">
     <div class="nav-inner container">
-      <a class="brand" href="#">
+      <a class="brand" href="index.html">
         <img src="static/images/coat-of-arms.png" alt="County Logo" class="brand-logo">
-        <span class="brand-text">
-          Government of Vihiga County
-        </span>
+        <span class="brand-text">Government of Kenya</span>
       </a>
 
       <!-- Mobile menu toggle (CSS-only) -->
@@ -31,39 +25,23 @@
       </label>
 
       <nav class="nav-links">
-        <a href="#" class="active">Home</a>
+        <a href="index.html" class="active">Home</a>
 
-        <!-- Public Dashboard (has dropdown) -->
         <div class="has-dd">
-          <a href="javascript:void(0)" class="dd-parent" aria-haspopup="true">Public Dashboard</a>
-          <!-- mobile/touch toggle -->
-          <input type="checkbox" id="dd-dashboard" class="dd-toggle" aria-label="Toggle Public Dashboard menu">
+          <a href="javascript:void(0)" class="dd-parent" aria-haspopup="true">Dashboard</a>
+          <input type="checkbox" id="dd-dashboard" class="dd-toggle" aria-label="Toggle Dashboard menu">
           <label for="dd-dashboard" class="dd-caret" aria-hidden="true"></label>
 
           <div class="dropdown">
-            <a href="national.html">National Government</a>
-
-            <!-- County Government (nested submenu) -->
-            <div class="has-dd sub">
-              <a href="#" class="dd-parent" aria-haspopup="true">County Government</a>
-              <!-- mobile/touch toggle -->
-              <input type="checkbox" id="dd-county" class="dd-toggle" aria-label="Toggle County menu">
-              <label for="dd-county" class="dd-caret" aria-hidden="true"></label>
-
-              <div class="dropdown">
-                <!-- Send users to auth, then redirect to target dashboard after sign-in -->
-                <a href="auth.html?next=vihiga.html">Vihiga</a>
-                <a href="auth.html?next=makueni.html">Makueni</a>
-              </div>
-            </div>
+            <a href="vihiga.html">Vihiga County</a>
+            <a href="makueni.html">Makueni County</a>
           </div>
         </div>
 
-        <a href="#resources">Resources &amp; Publications</a>
-        <a href="#">Feedback</a>
-        <a href="#">FAQ</a>
-        <a href="#">Contact Us</a>
-        <a href="#" class="btn btn-login">Login</a>
+        <!-- Indicators repo (update href when ready) -->
+        <a href="#indicators">Indicators</a>
+
+        <a href="https://merl.agnes.africa/home" class="btn btn-login">Login</a>
       </nav>
     </div>
   </header>
@@ -72,16 +50,14 @@
   <section class="hero">
     <div class="hero-inner container">
       <div class="hero-media">
-        <!-- Replace with your photo; use a large, wide image -->
         <img src="static/images/hero-excavator.jpg" alt="Project in progress">
       </div>
 
       <div class="hero-copy">
-        <h1 class="hero-rotator" aria-label="Government of Vihiga County – Monitoring and Evaluation – Tool">
-            <span class="slide">Government of Vihiga County</span>
-            <span class="slide">Monitoring, Evaluation, Reporting, and Learning</span>
+        <h1 class="hero-rotator" aria-label="Government of Kenya – Monitoring and Evaluation – Tool">
+          <span class="slide">Government of Kenya</span>
+          <span class="slide">Monitoring, Evaluation, Reporting, and Learning</span>
         </h1>
-
 
         <div class="divider"></div>
 
@@ -91,33 +67,25 @@
 
         <div class="quick-stats">
           <div class="qs-header">Quick Stats</div>
-
           <div class="cards">
-            <!-- Card: All projects -->
             <article class="stat-card">
               <h3>All projects</h3>
-              <div class="stat-number">2051</div>
+              <div class="stat-number">51</div>
               <div class="stat-sub">Budget Ksh 8,932,874,713</div>
             </article>
-
-            <!-- Card: Completed projects -->
             <article class="stat-card">
               <h3>Completed projects</h3>
-              <div class="stat-number">1190</div>
-              <div class="stat-sub">Budget Ksh 5,067,779,787</div>
+              <div class="stat-number">21</div>
+              <div class="stat-sub">Budget Ksh 2,067,779,787</div>
             </article>
-
-            <!-- Card: Ongoing projects -->
             <article class="stat-card">
               <h3>Ongoing projects</h3>
-              <div class="stat-number">133</div>
+              <div class="stat-number">12</div>
               <div class="stat-sub">&nbsp;</div>
             </article>
-
-            <!-- Card: Not started projects -->
             <article class="stat-card">
               <h3>Not started projects</h3>
-              <div class="stat-number warn">1</div>
+              <div class="stat-number warn">3</div>
               <div class="stat-sub">&nbsp;</div>
             </article>
           </div>
@@ -130,11 +98,11 @@
   <section id="dashboard" class="dash-preview">
     <div class="container">
       <div class="dash-head">
-        <h2>Public Dashboard</h2>
+        <h2>Public Service Delivery Analytics</h2>
         <p class="dash-sub">
-          Explore live insights on project distribution, budget utilization, timelines, and completion rates across wards and departments.
+          Near–real-time insights on project performance, budget utilization, sector investments, and service delivery outcomes across the county.
         </p>
-        <a href="#" class="btn btn-cta">Open Dashboard</a>
+        <a href="auth.html?next=vihiga.html&county=Vihiga" class="btn btn-cta">Open Dashboard</a>
       </div>
 
       <div class="dash-grid">
@@ -147,7 +115,7 @@
             <div class="big-number">73%</div>
             <div class="muted">of allocated budget absorbed</div>
           </div>
-          <div class="dash-foot">Updated 3 days ago</div>
+          <div class="dash-foot">Updated 1 month ago</div>
         </article>
 
         <article class="dash-card">
@@ -156,9 +124,9 @@
             <span class="pill">Snapshot</span>
           </div>
           <ul class="legend">
-            <li><span class="dot green"></span> Completed: 1,190</li>
-            <li><span class="dot blue"></span> Ongoing: 133</li>
-            <li><span class="dot amber"></span> Not started: 1</li>
+            <li><span class="dot green"></span> Completed: 65</li>
+            <li><span class="dot blue"></span> Ongoing: 18</li>
+            <li><span class="dot amber"></span> Not started: 6</li>
           </ul>
           <div class="dash-foot">See full breakdown</div>
         </article>
@@ -176,6 +144,23 @@
           </ul>
           <div class="dash-foot"><a href="#">View sector maps →</a></div>
         </article>
+        <article class="dash-card indicators-card">
+          <div class="dash-card-head">
+            <h3>Indicators</h3>
+            <span class="pill">Climate & Development</span>
+          </div>
+
+          <div class="dash-main">
+            <p class="muted">
+              Explore the full set of indicators used for monitoring, evaluation, reporting, and learning across counties.
+            </p>
+          </div>
+
+          <div class="dash-foot">
+            <a href="#indicators">View Indicators →</a>
+          </div>
+        </article>
+
       </div>
     </div>
   </section>
@@ -190,7 +175,7 @@
 
       <div class="gallery-grid">
         <a href="#" class="g-item">
-          <img src="static/images/gallery-1.jpg" alt="Concept Note cover">
+          <img src="static/images/AGNES.png" alt="Concept Note cover">
           <span class="g-caption">Concept Note (2025–2026)</span>
         </a>
         <a href="#" class="g-item">
@@ -215,33 +200,22 @@
         </a>
       </div>
 
-
       <div class="gallery-cta">
         <a href="#" class="btn btn-ghost">Browse All Resources</a>
       </div>
-
     </div>
   </section>
 
-
-
-  <!-- FOOTER (placeholder) -->
+  <!-- FOOTER -->
   <footer class="footer">
     <div class="container footer-inner">
-      <p>© <span id="year"></span> Government of Vihiga County. All rights reserved.</p>
+      <p>© <span id="year"></span> Government of Kenya. All rights reserved.</p>
       <div class="footer-links">
-        <a href="#">Privacy</a>
-        <span>·</span>
-        <a href="#">Terms</a>
-        <span>·</span>
-        <a href="#">Support</a>
+        <a href="#">Privacy</a><span>·</span><a href="#">Terms</a><span>·</span><a href="#">Support</a>
       </div>
     </div>
   </footer>
 
-  <script>
-    // Year in footer
-    document.getElementById('year').textContent = new Date().getFullYear();
-  </script>
+  <script>document.getElementById('year').textContent = new Date().getFullYear();</script>
 </body>
 </html>
