--- a/vihiga.html
+++ b/vihiga.html
@@ -1,7 +1,153 @@
-<!DOCTYPE html><html lang="en"><head>
-<meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
-<title>Vihiga Dashboard</title>
-</head><body>
-  <h1>Vihiga Projects Dashboard</h1>
-  <p>Replace with real dashboard after auth.</p>
-</body></html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
+  <title>Vihiga County – Projects Dashboard</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="styles.css" />
+</head>
+<body>
+  <header class="navbar">
+    <div class="nav-inner container">
+      <a class="brand" href="index.html">
+        <img src="static/images/coat-of-arms.png" alt="County Logo" class="brand-logo">
+        <span class="brand-text">Government of Vihiga County</span>
+      </a>
+
+      <input type="checkbox" id="nav-toggle" class="nav-toggle" aria-label="Toggle navigation">
+      <label for="nav-toggle" class="nav-burger" aria-hidden="true"><span></span><span></span><span></span></label>
+
+      <nav class="nav-links">
+        <a href="index.html">Home</a>
+
+        <div class="has-dd">
+          <a href="javascript:void(0)" class="dd-parent">Dashboard</a>
+          <input type="checkbox" id="dd-dashboard" class="dd-toggle">
+          <label for="dd-dashboard" class="dd-caret"></label>
+          <div class="dropdown">
+            <a href="vihiga.html">Vihiga County</a>
+            <a href="makueni.html">Makueni County</a>
+          </div>
+        </div>
+
+        <a href="#indicators">Indicators</a>
+
+        <a href="https://merl.agnes.africa/home" class="btn btn-login">Login</a>
+      </nav>
+
+    </div>
+  </header>
+
+  <!-- HERO -->
+  <section class="hero">
+    <div class="hero-inner container">
+      <div class="hero-media">
+        <img src="static/images/hero-excavator.jpg" alt="Vihiga Projects">
+      </div>
+
+      <div class="hero-copy">
+        <h1 class="hero-rotator" aria-label="Vihiga County – Projects Dashboard">
+          <span class="slide">Vihiga County</span>
+          <span class="slide">Projects Dashboard</span>
+          <span class="slide">Report &amp; Track Progress</span>
+        </h1>
+
+        <div class="divider"></div>
+
+        <p class="lead">
+          View county projects and file progress reports. Data shown here reflects the Vihiga implementation context.
+        </p>
+
+        <div class="quick-stats">
+          <div class="qs-header">Quick Stats — Vihiga</div>
+          <div class="cards">
+            <article class="stat-card">
+              <h3>Total Projects</h3>
+              <div class="stat-number">51</div>
+              <div class="stat-sub">Budget Ksh 1,246,000,000</div>
+            </article>
+            <article class="stat-card">
+              <h3>Completed</h3>
+              <div class="stat-number">38</div>
+              <div class="stat-sub">(+ last 12 months)</div>
+            </article>
+            <article class="stat-card">
+              <h3>Ongoing</h3>
+              <div class="stat-number">10</div>
+              <div class="stat-sub">&nbsp;</div>
+            </article>
+            <article class="stat-card">
+              <h3>Not Started</h3>
+              <div class="stat-number warn">3</div>
+              <div class="stat-sub">&nbsp;</div>
+            </article>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- PROJECTS TO REPORT -->
+  <section id="projects" class="gallery-strip">
+    <div class="container">
+      <div class="gallery-head">
+        <h2>Projects — Click to Report</h2>
+        <p class="dash-sub">Select a project to file an update. You must be signed in.</p>
+      </div>
+
+      <div class="gallery-grid">
+        <a href="report.html?project=VHG-001" class="g-item">
+          <img src="static/images/gallery-1.jpg" alt="Ward Access Road">
+          <span class="g-caption">VHG-001 · Ward Access Road</span>
+        </a>
+        <a href="report.html?project=VHG-002" class="g-item">
+          <img src="static/images/gallery-2.jpg" alt="Community Borehole">
+          <span class="g-caption">VHG-002 · Community Borehole</span>
+        </a>
+        <a href="report.html?project=VHG-003" class="g-item">
+          <img src="static/images/gallery-3.jpg" alt="Health Centre Upgrade">
+          <span class="g-caption">VHG-003 · Health Centre Upgrade</span>
+        </a>
+        <a href="report.html?project=VHG-004" class="g-item">
+          <img src="static/images/gallery-4.jpg" alt="Market Stalls">
+          <span class="g-caption">VHG-004 · Market Stalls</span>
+        </a>
+        <a href="report.html?project=VHG-005" class="g-item">
+          <img src="static/images/gallery-5.jpg" alt="Bridge Repair">
+          <span class="g-caption">VHG-005 · Bridge Repair</span>
+        </a>
+        <a href="report.html?project=VHG-006" class="g-item">
+          <img src="static/images/gallery-6.jpg" alt="School Classrooms">
+          <span class="g-caption">VHG-006 · School Classrooms</span>
+        </a>
+      </div>
+
+      <div class="gallery-cta">
+        <a href="#" class="btn btn-ghost">View All Vihiga Projects</a>
+      </div>
+    </div>
+  </section>
+
+  <footer class="footer">
+    <div class="container footer-inner">
+      <p>© <span id="year"></span> Government of Vihiga County. All rights reserved.</p>
+      <div class="footer-links">
+        <a href="#">Privacy</a><span>·</span><a href="#">Terms</a><span>·</span><a href="#">Support</a>
+      </div>
+    </div>
+  </footer>
+
+  <script>
+    document.getElementById('year').textContent = new Date().getFullYear();
+    // Require login: if not logged in, bounce to auth with redirect back here
+    const u = localStorage.getItem('merlUser');
+    if(!u){
+      location.replace("https://merl.agnes.africa/home");
+    }
+
+  </script>
+</body>
+</html>
