updated the styles

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <div class="divider"></div>
 
         <p class="lead">
-          A digital MERL tool that embeds climate-specific indicators to track, evaluate, report, and learn from climate investments—powering transparent, participatory, data-driven decisions in Vihiga County.
+          This Monitoring, Evaluation, Reporting and Learning (MERL) tool is a structured digital system designed to track the progress, effectiveness, and impact of projects, programs, or organizational strategies across counties. It provides a systematic approach to collecting, managing, analyzing, and reporting data, enabling evidence-based decision-making and accountability.
         </p>
 
         <div class="quick-stats">
@@ -70,22 +70,22 @@
           <div class="cards">
             <article class="stat-card">
               <h3>All projects</h3>
-              <div class="stat-number">51</div>
-              <div class="stat-sub">Budget Ksh 8,932,874,713</div>
+              <div class="stat-number">89</div>
+              <!--<div class="stat-sub">Budget Ksh 8,932,874,713</div>-->
             </article>
             <article class="stat-card">
               <h3>Completed projects</h3>
-              <div class="stat-number">21</div>
-              <div class="stat-sub">Budget Ksh 2,067,779,787</div>
+              <div class="stat-number">65</div>
+              <!--<div class="stat-sub">Budget Ksh 2,067,779,787</div>-->
             </article>
             <article class="stat-card">
               <h3>Ongoing projects</h3>
-              <div class="stat-number">12</div>
+              <div class="stat-number">18</div>
               <div class="stat-sub">&nbsp;</div>
             </article>
             <article class="stat-card">
               <h3>Not started projects</h3>
-              <div class="stat-number warn">3</div>
+              <div class="stat-number warn">6</div>
               <div class="stat-sub">&nbsp;</div>
             </article>
           </div>
