--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
-  <title>Government of Kenya – MERL TOOL</title>
+  <title>MERL TOOL</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
@@ -15,7 +15,7 @@
     <div class="nav-inner container">
       <a class="brand" href="index.html">
         <img src="static/images/coat-of-arms.png" alt="County Logo" class="brand-logo">
-        <span class="brand-text">Government of Kenya</span>
+        <span class="brand-text">MERL TOOL</span>
       </a>
 
       <!-- Mobile menu toggle (CSS-only) -->
@@ -28,18 +28,15 @@
         <a href="index.html" class="active">Home</a>
 
         <div class="has-dd">
-          <a href="javascript:void(0)" class="dd-parent" aria-haspopup="true">Dashboard</a>
-          <input type="checkbox" id="dd-dashboard" class="dd-toggle" aria-label="Toggle Dashboard menu">
-          <label for="dd-dashboard" class="dd-caret" aria-hidden="true"></label>
+          <a href="javascript:void(0)" class="dd-parent" aria-haspopup="true">Counties</a>
+          <input type="checkbox" id="dd-counties" class="dd-toggle" aria-label="Toggle Counties menu">
+          <label for="dd-counties" class="dd-caret" aria-hidden="true"></label>
 
           <div class="dropdown">
             <a href="vihiga.html">Vihiga County</a>
             <a href="makueni.html">Makueni County</a>
           </div>
         </div>
-
-        <!-- Indicators repo (update href when ready) -->
-        <a href="#indicators">Indicators</a>
 
         <a href="https://merl.agnes.africa/home" class="btn btn-login">Login</a>
       </nav>
@@ -69,23 +66,28 @@
           <div class="qs-header">Quick Stats</div>
           <div class="cards">
             <article class="stat-card">
-              <h3>All projects</h3>
-              <div class="stat-number">89</div>
+              <h3>All Projects</h3>
+              <div class="stat-number">20</div>
               <!--<div class="stat-sub">Budget Ksh 8,932,874,713</div>-->
             </article>
             <article class="stat-card">
-              <h3>Completed projects</h3>
-              <div class="stat-number">65</div>
-              <!--<div class="stat-sub">Budget Ksh 2,067,779,787</div>-->
-            </article>
-            <article class="stat-card">
-              <h3>Ongoing projects</h3>
-              <div class="stat-number">18</div>
+              <h3>Ongoing Projects</h3>
+              <div class="stat-number">19</div>
               <div class="stat-sub">&nbsp;</div>
             </article>
             <article class="stat-card">
-              <h3>Not started projects</h3>
-              <div class="stat-number warn">6</div>
+              <h3>Not started Projects</h3>
+              <div class="stat-number warn">0</div>
+              <div class="stat-sub">&nbsp;</div>
+            </article>
+            <article class="stat-card">
+              <h3>Stalled Projects</h3>
+              <div class="stat-number warn">0</div>
+              <div class="stat-sub">&nbsp;</div>
+            </article>
+            <article class="stat-card">
+              <h3>Completed Projects</h3>
+              <div class="stat-number warn">1</div>
               <div class="stat-sub">&nbsp;</div>
             </article>
           </div>
@@ -120,21 +122,8 @@
 
         <article class="dash-card">
           <div class="dash-card-head">
-            <h3>Projects by Status</h3>
-            <span class="pill">Snapshot</span>
-          </div>
-          <ul class="legend">
-            <li><span class="dot green"></span> Completed: 65</li>
-            <li><span class="dot blue"></span> Ongoing: 18</li>
-            <li><span class="dot amber"></span> Not started: 6</li>
-          </ul>
-          <div class="dash-foot">See full breakdown</div>
-        </article>
-
-        <article class="dash-card">
-          <div class="dash-card-head">
             <h3>Top Sectors</h3>
-            <span class="pill">Countywide</span>
+            <span class="pill">As per the NCCAP</span>
           </div>
           <ul class="list">
             <li>Roads & Infrastructure</li>
@@ -144,26 +133,133 @@
           </ul>
           <div class="dash-foot"><a href="#">View sector maps →</a></div>
         </article>
-        <article class="dash-card indicators-card">
-          <div class="dash-card-head">
-            <h3>Indicators</h3>
-            <span class="pill">Climate & Development</span>
-          </div>
-
-          <div class="dash-main">
-            <p class="muted">
-              Explore the full set of indicators used for monitoring, evaluation, reporting, and learning across counties.
-            </p>
-          </div>
-
-          <div class="dash-foot">
-            <a href="#indicators">View Indicators →</a>
-          </div>
-        </article>
 
       </div>
     </div>
   </section>
+
+  <!-- PROJECTS EXPLORER -->
+  <section id="projects" class="projects-section">
+    <div class="container">
+      <div class="projects-head">
+        <h2>Climate Investment Projects</h2>
+        <p class="dash-sub">
+          Browse county projects and quickly filter by year, county, and sector to see where
+          climate investments are happening.
+        </p>
+      </div>
+
+      <!-- FILTER BAR -->
+      <form class="projects-filters" id="projects-filter-form">
+        <div class="filter-group">
+          <label for="filter-year">Year</label>
+          <select id="filter-year" name="year">
+            <option value="">All years</option>
+            <option value="2024">2024/2025</option>
+            <option value="2023">2023/2024</option>
+            <option value="2022">2022/2023</option>
+          </select>
+        </div>
+
+        <div class="filter-group">
+          <label for="filter-county">County</label>
+          <select id="filter-county" name="county">
+            <option value="">All counties</option>
+            <option value="Makueni">Makueni</option>
+            <option value="Vihiga">Vihiga</option>
+            <!--<option value="Kitui">Kitui</option>
+            <option value="Kajiado">Kajiado</option>-->
+          </select>
+        </div>
+
+        <div class="filter-group">
+          <label for="filter-sector">Sector</label>
+          <select id="filter-sector" name="sector">
+            <option value="">All sectors</option>
+            <option value="Water">Water &amp; Sanitation</option>
+            <option value="Agriculture">Agriculture</option>
+            <option value="Health">Health</option>
+            <option value="Infrastructure">Roads &amp; Infrastructure</option>
+          </select>
+        </div>
+
+        <div class="filter-actions">
+          <button type="submit" class="btn btn-cta filter-btn">Filter</button>
+          <button type="button" class="btn btn-ghost filter-reset" id="filter-reset">
+            Reset
+          </button>
+        </div>
+      </form>
+
+      <!-- PROJECT CARDS -->
+      <div class="projects-grid" id="projects-grid">
+        <article class="project-card"
+                 data-year="2024"
+                 data-county="Makueni"
+                 data-sector="Water">
+          <h3>Kikuu / Kiangini Community Water Project</h3>
+          <p>
+            Construction and augmentation of a community water supply system to improve
+            household access to safe water under climate stress.
+          </p>
+          <div class="project-meta">
+            <span>FY 2024/25</span>
+            <span>Makueni County</span>
+            <span>Water &amp; Sanitation</span>
+          </div>
+        </article>
+
+        <article class="project-card"
+                 data-year="2024"
+                 data-county="Vihiga"
+                 data-sector="Water">
+          <h3>Kaila Climate-Resilient Water Project</h3>
+          <p>
+            Rehabilitation and expansion of water infrastructure to support climate-resilient
+            livelihoods in Kaila community.
+          </p>
+          <div class="project-meta">
+            <span>FY 2024/25</span>
+            <span>Vihiga County</span>
+            <span>Water &amp; Sanitation</span>
+          </div>
+        </article>
+
+        <article class="project-card"
+                 data-year="2023"
+                 data-county="Makueni"
+                 data-sector="Agriculture">
+          <h3>Climate-Smart Irrigation for Smallholders</h3>
+          <p>
+            Drip irrigation and on-farm water harvesting for smallholder farmers to
+            reduce climate risk and improve yields.
+          </p>
+          <div class="project-meta">
+            <span>FY 2023/24</span>
+            <span>Makueni County</span>
+            <span>Agriculture</span>
+          </div>
+        </article>
+
+        <article class="project-card"
+                 data-year="2022"
+                 data-county="Kitui"
+                 data-sector="Infrastructure">
+          <h3>Rural Access Roads &amp; Flood Control</h3>
+          <p>
+            Upgrading critical access roads with drainage and flood-protection structures
+            to keep markets connected during extreme weather.
+          </p>
+          <div class="project-meta">
+            <span>FY 2022/23</span>
+            <span>Kitui County</span>
+            <span>Roads &amp; Infrastructure</span>
+          </div>
+        </article>
+      </div>
+    </div>
+  </section>
+
 
   <!-- RESOURCES & PUBLICATIONS -->
   <section id="resources" class="gallery-strip">
@@ -210,7 +306,7 @@
   <section id="contact" class="contact-section">
     <div class="container contact-inner">
 
-      <h2>Reach Out to the MERL Support Team</h2>
+      <h2>MERL Support</h2>
       <p class="contact-sub">
         For technical assistance, dashboard access, or general MERL support, contact us using the channels below.
       </p>
@@ -272,6 +368,47 @@
 
     </div>
   </section>
+
+  <script>
+    // Footer year
+    document.getElementById('year').textContent = new Date().getFullYear();
+
+    // Projects filter
+    (function () {
+      const form = document.getElementById('projects-filter-form');
+      if (!form) return; // safety if section is removed
+
+      const resetBtn = document.getElementById('filter-reset');
+      const cards = Array.from(document.querySelectorAll('.project-card'));
+
+      function applyFilters() {
+        const year = form.year.value;
+        const county = form.county.value;
+        const sector = form.sector.value;
+
+        cards.forEach(card => {
+          const matchYear   = !year   || card.dataset.year   === year;
+          const matchCounty = !county || card.dataset.county === county;
+          const matchSector = !sector || card.dataset.sector === sector;
+
+          card.style.display = (matchYear && matchCounty && matchSector) ? '' : 'none';
+        });
+      }
+
+      form.addEventListener('submit', function (e) {
+        e.preventDefault();
+        applyFilters();
+      });
+
+      // Live filtering on change (optional but nice)
+      form.addEventListener('change', applyFilters);
+
+      resetBtn.addEventListener('click', function () {
+        form.reset();
+        applyFilters();
+      });
+    })();
+  </script>
 
 
 
