--- a/makueni.html
+++ b/makueni.html
@@ -72,22 +72,22 @@
           <div class="cards">
             <article class="stat-card">
               <h3>All Projects</h3>
-              <div class="stat-number">38</div>
-              <div class="stat-sub">Budget Ksh 1,980,000,000</div>
+              <div class="stat-number">14</div>
+              <!--<div class="stat-sub">Budget Ksh 1,980,000,000</div>-->
             </article>
             <article class="stat-card">
               <h3>Completed Projects</h3>
-              <div class="stat-number">27</div>
+              <div class="stat-number">0</div>
               <div class="stat-sub">Completed in the last 12 months</div>
             </article>
             <article class="stat-card">
               <h3>Ongoing Projects</h3>
-              <div class="stat-number">8</div>
+              <div class="stat-number">14</div>
               <div class="stat-sub">&nbsp;</div>
             </article>
             <article class="stat-card">
               <h3>Not Started</h3>
-              <div class="stat-number warn">3</div>
+              <div class="stat-number warn">0</div>
               <div class="stat-sub">&nbsp;</div>
             </article>
           </div>
