--- a/vihiga.html
+++ b/vihiga.html
@@ -218,6 +218,7 @@
             <p><strong>Status:</strong> Completed, paid and in use; managed by a community
               management committee.</p>
           </div>
+          <a href="project-details.html?id=augmentation-of-ebukhaya-community-water-project" class="read-more-btn">Read More →</a>
         </article>
 
         <!-- 2. EKAMANJI COMMUNITY CLIMATE RESILIENT WATER PROJECT -->
@@ -243,6 +244,7 @@
             <p><strong>Status:</strong> Completed, paid and in use; managed by VIWASCO,
               the County Water Utility Company.</p>
           </div>
+          <a href="project-details.html?id=ekamanji-community-climate-resilient-water-project" class="read-more-btn">Read More →</a>
         </article>
 
         <!-- 3. KAILA COMMUNITY CLIMATE RESILIENT WATER PROJECT -->
@@ -268,6 +270,7 @@
             <p><strong>Status:</strong> Completed, paid and in use; managed by a
               community management committee.</p>
           </div>
+          <a href="project-details.html?id=construction-of-kaila-community-climate-resilient-water-project" class="read-more-btn">Read More →</a>
         </article>
 
         <!-- 4. MARAGOLI HILLS FOREST REHABILITATION -->
@@ -293,6 +296,7 @@
             <p><strong>Status:</strong> Completed and paid; under a maintenance framework
               and managed by the Kenya Forest Service.</p>
           </div>
+          <a href="project-details.html?id=rehabilitation-of-70-acres-of-maragoli-hills-forest" class="read-more-btn">Read More →</a>
         </article>
 
         <!-- 5. MUTAVE–JEPSESI BRIDGE -->
@@ -317,6 +321,7 @@
             <p><strong>Period:</strong> 2nd Sept 2024 – 2nd Dec 2024</p>
             <p><strong>Status:</strong> Completed, paid and in use.</p>
           </div>
+        <a href="project-details.html?id=construction-of-mutave-jepesi-bridge" class="read-more-btn">Read More →</a>
         </article>
 
         <!-- 6. VIGINA WATER PROJECT EQUIPPING & SOLARIZATION -->
@@ -342,6 +347,7 @@
             <p><strong>Status:</strong> Completed, fully paid and in use; managed by a
               community project management committee.</p>
           </div>
+          <a href="project-details.html?id=equipping-expansion-solarization-of-vigina-water-project" class="read-more-btn">Read More →</a>
         </article>
 
         <!-- 7. NADIRADI COMMUNITY WATER PROJECT -->
@@ -367,6 +373,7 @@
             <p><strong>Status:</strong> Completed, paid and in use; managed by a
               community management committee.</p>
           </div>
+        <a href="project-details.html?id=augmentation-of-nadiradi-community-water-project" class="read-more-btn">Read More →</a>
         </article>
 
         <!-- 8. KAPTIK MWALA COMMUNITY WATER PROJECT -->
@@ -392,6 +399,7 @@
             <p><strong>Status:</strong> Completed, paid and in use; managed by a
               community management committee.</p>
           </div>
+        <a href="project-details.html?id=construction-of-kaptik-mwala-climate-resilient-water-project" class="read-more-btn">Read More →</a>
         </article>
 
         <!-- 9. KEGONDI COMMUNITY WATER PROJECT -->
@@ -417,6 +425,7 @@
             <p><strong>Status:</strong> Completed, paid and in use; managed by a
               community management committee.</p>
           </div>
+        <a href="project-details.html?id=construction-of-kegondi-community-climate-resilient-water-project" class="read-more-btn">Read More →</a>
         </article>
 
         <!-- 10. SOUTH MARAGOLI APICULTURE PROJECT -->
@@ -442,6 +451,7 @@
             <p><strong>Status:</strong> Works ongoing (about 70% complete); expenditure
               to date: Ksh 0.00.</p>
           </div>
+          <a href="project-details.html?id=completion-commercialization-of-south-maragoli-apiculture-project" class="read-more-btn">Read More →</a>
         </article>
 
         <!-- 11. BUHANI IRRIGATION PROJECT -->
@@ -467,11 +477,24 @@
             <p><strong>Households:</strong> 150 &nbsp;|&nbsp;
               <strong>Status:</strong> Completed.</p>
           </div>
+          <a href="project-details.html?id=completion-commercialization-of-buhani-irrigation-project" class="read-more-btn">Read More →</a>
         </article>
 
       </div>
     </div>
   </section>
+
+  <script>
+    document.querySelectorAll('.project-card').forEach(card => {
+      card.addEventListener('click', () => {
+        const title = card.querySelector('h3').textContent.trim();
+        const id = title.toLowerCase().replace(/[^a-z0-9]+/g, '-');
+
+        window.location.href = `project-details.html?id=${id}`;
+      });
+    });
+  </script>
+
 
   <!-- RESOURCES & PUBLICATIONS -->
   <section id="resources" class="gallery-strip">
